<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_pass1"
        android:layout_width="match_parent"
        android:layout_height="32px"
        android:text="@string/txid_storage_m_pass_enter"
        android:textSize="20px" />

    <EditText
        android:id="@+id/edit_pass1"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:textSize="20px"
        android:inputType="number"
        android:password="true"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/txt_pass2"
        android:layout_width="match_parent"
        android:layout_height="32px"
        android:textSize="20px"
        android:text="@string/txid_storage_m_pass_re_enter" />

    <EditText
        android:id="@+id/edit_pass2"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:textSize="20px"
        android:inputType="number"
        android:password="true"
        android:imeOptions="actionDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="55px"
            android:text="@string/txid_cmn_b_cancel"
            android:textSize="20px"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="55px"
            android:text="@string/txid_cmn_b_ok"
            android:textSize="20px"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>