<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- File Name -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_storage_t_file_name"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_filename"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:textSize="20px"
            android:imeOptions="actionDone" />
    </LinearLayout>


    <!-- File password -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="200px"
            android:layout_height="60px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_storage_t_file_pass"
            android:textSize="25px" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:password="true"
            android:textSize="20px"
            android:textColor="@color/black"
            android:clickable="true"
            android:scrollHorizontally="true"
            android:background="@android:drawable/edit_text" />
    </LinearLayout>

    <!-- Folder -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="200px"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_storage_t_target_folder"
            android:textSize="25px" />

        <TextView
            android:id="@+id/txt_folder"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:textSize="20px"
            android:textColor="@color/black"
            android:clickable="true"
            android:scrollHorizontally="true"
            android:background="@android:drawable/edit_text"
            android:ellipsize="end"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="55px"
            android:text="@string/txid_cmn_b_cancel"
            android:textSize="20px"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="55px"
            android:text="@string/txid_cmn_b_ok"
            android:textSize="20px"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>