<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_layout"
        android:layout_above="@+id/main_layout"
        android:layout_marginLeft="32px"
        android:layout_marginBottom="4px"
        android:text="@string/txid_cmn_t_title"
        android:textColor="@color/gray"
        android:textSize="32px"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="870px"
        android:layout_height="320px"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:background="@drawable/destination_background_in" >

        <RelativeLayout
            android:id="@+id/container_job"
            android:layout_width="fill_parent"
            android:layout_height="55px"
            android:layout_marginTop="40px">

	        <Button
	            android:id="@+id/btn_jobmode"
	            android:layout_width="150px"
	            android:layout_height="fill_parent"
	            android:layout_marginLeft="50px"
	            android:layout_centerVertical="true"
	            android:textSize="20px"
	            android:text="@string/txid_main_b_jobmode" />

	        <LinearLayout
	            android:id="@+id/view_jobmode"
	            android:layout_width="240px"
	            android:layout_height="fill_parent"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="195px"
	            android:gravity="center_vertical"
	            android:background="@android:drawable/editbox_background" >

			     <TextView
			         android:id="@+id/txt_jobmode"
			         android:layout_width="0dip"
			         android:layout_height="fill_parent"
			         android:textSize="20px"
			         android:gravity="center_vertical"
			         android:scrollHorizontally="true"
			         android:ellipsize="end"
			         android:textColor="@color/gray"
			         android:layout_weight="1" />
	        </LinearLayout>

	        <Button
	            android:id="@+id/btn_send_storedfile"
	            android:layout_width="150px"
	            android:layout_height="fill_parent"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="21px"
	            android:layout_toRightOf="@+id/view_jobmode"
	            android:textSize="20px"
	            android:text="@string/txid_main_b_storedfile"
	            android:visibility="invisible" />

	        <LinearLayout
	            android:id="@+id/view_send_storedfile"
	            android:layout_width="240px"
	            android:layout_height="fill_parent"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="166px"
	            android:layout_toRightOf="@+id/view_jobmode"
	            android:gravity="center_vertical"
	            android:background="@android:drawable/editbox_background"
	            android:visibility="invisible" >

			     <TextView
			         android:id="@+id/txt_send_storedfile_title"
			         android:layout_width="0dip"
			         android:layout_height="fill_parent"
			         android:textSize="20px"
			         android:gravity="center_vertical"
			         android:scrollHorizontally="true"
			         android:ellipsize="end"
			         android:textColor="@color/gray"
			         android:layout_weight="1" 
			         android:singleLine="true"/>
			     
	        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_setting"
            android:layout_width="640px"
            android:layout_height="255px"
            android:layout_alignLeft="@+id/container_job"
            android:layout_below="@+id/container_job" >

	        <RelativeLayout
	            android:id="@+id/container_destination"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/btn_color"
		        android:visibility="visible" >"

		        <Button
		            android:id="@+id/btn_destination"
		            android:layout_width="150px"
		            android:layout_height="70px"
		            android:layout_marginTop="10px"
		            android:textSize="20px"
		            android:text="@string/txid_main_b_destination" />

		        <LinearLayout
		            android:id="@+id/view_destination"
		            android:layout_width="440px"
		            android:layout_height="70px"
		            android:layout_alignTop="@+id/btn_destination"
		            android:layout_marginLeft="145px"
		            android:gravity="center_vertical"
		            android:background="@android:drawable/editbox_background" >

				     <ImageView
				         android:id="@+id/img_dest_icon"
				         android:layout_width="50px"
				         android:layout_height="20px" />

				     <TextView
				         android:id="@+id/text_dest_title"
				         android:layout_width="0dip"
				         android:layout_height="40px"
				         android:layout_weight="1"
				         android:textSize="20px"
				         android:textStyle="bold"
				         android:gravity="center_vertical"
				         android:ellipsize="end"
				         android:scrollHorizontally="true" 
				         android:singleLine="true"/>

		        </LinearLayout>
		    </RelativeLayout>

	        <RelativeLayout
	            android:id="@+id/container_store_setting"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/btn_color"
		        android:visibility="invisible" >"
"
		        <Button
		            android:id="@+id/btn_store_setting"
		            android:layout_width="150px"
		            android:layout_height="70px"
		            android:layout_marginTop="10px"
		            android:textSize="20px"
		            android:text="@string/txid_main_b_storefile" />

		        <LinearLayout
		            android:id="@+id/view_store_setting"
		            android:layout_width="440px"
		            android:layout_height="70px"
		            android:layout_alignTop="@+id/btn_store_setting"
		            android:layout_marginLeft="145px"
		            android:gravity="center_vertical"
		            android:background="@android:drawable/editbox_background" >

				     <ImageView
				         android:id="@+id/img_store_icon"
				         android:layout_width="50px"
				         android:layout_height="20px"
				         android:src="@drawable/icon_folder_small"
				         android:visibility="invisible" />

				     <TextView
				         android:id="@+id/txt_store_folder"
				         android:layout_width="0dip"
				         android:layout_height="40px"
				         android:layout_weight="1"
				         android:textSize="20px"
				         android:textStyle="bold"
				         android:gravity="center_vertical"
				         android:ellipsize="end"
				         android:scrollHorizontally="true" 
				         android:singleLine="true"/>

		        </LinearLayout>
	        </RelativeLayout>

	        <Button
	            android:id="@+id/btn_color"
	            android:layout_width="180px"
	            android:layout_height="70px"
	            android:layout_below="@+id/container_destination"
	            android:layout_alignParentLeft="true"
	            android:layout_marginTop="20px"
	            android:layout_marginLeft="50px"
	            android:textSize="16px"
	            android:textColor="@color/black" />

	        <Button
	            android:id="@+id/btn_file"
	            android:layout_width="180px"
	            android:layout_height="70px"
	            android:layout_alignTop="@+id/btn_color"
	            android:layout_marginLeft="21px"
	            android:layout_toRightOf="@+id/btn_color"
	            android:textSize="16px"
	            android:textColor="@color/black" />

	        <Button
	            android:id="@+id/btn_side"
	            android:layout_width="180px"
	            android:layout_height="70px"
	            android:layout_alignTop="@+id/btn_file"
	            android:layout_marginLeft="21px"
	            android:layout_toRightOf="@+id/btn_file"
	            android:textSize="16px"
	            android:textColor="@color/black" />

	        <LinearLayout
	            android:id="@+id/btn_other"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/btn_side"
	            android:layout_alignRight="@+id/btn_side"
	            android:gravity="center"
	            android:clickable="true"
	            android:orientation="horizontal" >

	            <ImageView
	                android:layout_width="20px"
	                android:layout_height="15px"
	                android:background="@android:drawable/ic_media_play" />

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="40px"
	                android:text="@string/txid_scan_t_top_other_title"
	                android:gravity="center"
	                android:textColor="@color/dimgray"
	                android:textSize="20px" />
	        </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_start"
            android:layout_width="230px"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/container_setting">

	        <RelativeLayout
	            android:id="@+id/btn_start"
	            android:layout_width="170px"
	            android:layout_height="100px"
	            android:layout_alignParentBottom="true"
	            android:layout_marginBottom="50px"
	            android:layout_centerHorizontal="true"
	            android:background="@drawable/selector_bt_scan_start" >

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"
	                android:layout_centerVertical="true"
	                android:text="@string/txid_cmn_b_start"
	                android:textColor="@color/white"
	                android:textSize="26px" />
	        </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_below="@+id/main_layout"
       	android:layout_alignLeft="@+id/main_layout"
        android:layout_marginTop="4px"
	    android:layout_marginLeft="16px"
        android:orientation="horizontal" >

	    <ImageView
	        android:layout_width="35px"
	        android:layout_height="35px"
	        android:layout_centerVertical="true"
	        android:src="@android:drawable/ic_menu_info_details" />

	    <TextView
	        android:id="@+id/text_state"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:textColor="@color/gray"
	        android:textSize="25px"
	        android:text="@string/txid_scan_t_state_please_wait" />"
    </LinearLayout>

</RelativeLayout>